GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/B2b_NrDetails__c.object-meta.xml
<CustomObject>
    <description>Custom object migrated from Thango as part of Eurostar Delta migration project. Eurostar Jira ref DEIS-320</description>
    <label>Negotiated Rate</label>
    <nameField>
        <displayFormat>NR-{0000}</displayFormat>
        <label>Negotiated Rates SF Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiated Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>