GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/Account_PCC_s__c.field-meta.xml
<CustomField>
    <fullName>Account_PCC_s__c</fullName>
    <label>Account PCC’s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>