GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>this is to Support the Negotiated Rates List Views</description>
    <formula>CASESAFEID(ContractID__r.AccountId__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>