GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <formula>CASE (B2b_Status__c, &#39;To be Extracted&#39;, (IF (ISBLANK (B2b_RouteEndDate__c), &#39;Add&#39;, &#39;Remove&#39;)),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Type</label>
    <type>Text</type>
</CustomField>