GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_Account__c.field-meta.xml
<CustomField>
    <fullName>B2b_Account__c</fullName>
    <formula>HYPERLINK(ContractID__r.AccountId__c, ContractID__r.AccountId__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>