GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_Approved__c.field-meta.xml
<CustomField>
    <fullName>B2b_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>