GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_Bene_Extract__c.field-meta.xml
<CustomField>
    <fullName>B2b_Bene_Extract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bene Extract</label>
    <type>Checkbox</type>
</CustomField>