GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_BeneLastExtractionDate__c.field-meta.xml
<CustomField>
    <fullName>B2b_BeneLastExtractionDate__c</fullName>
    <label>Bene Last Extraction Date</label>
    <type>DateTime</type>
</CustomField>