GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_Code_type__c.field-meta.xml
<CustomField>
    <fullName>B2b_Code_type__c</fullName>
    <formula>TEXT( ContractID__r.AccountId__r.B2b_Booking_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code type</label>
    <type>Text</type>
</CustomField>