GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>B2b_Extract_Date__c</fullName>
    <label>Extract Date</label>
    <type>Date</type>
</CustomField>