GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_GDS_Air_Comfort_Tariff_Code__c.field-meta.xml
<CustomField>
    <fullName>B2b_GDS_Air_Comfort_Tariff_Code__c</fullName>
    <label>GDS Air Comfort Tariff Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>B2b_S3_BeNe_Comfort_Tariff_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C04FRBE</fullName>
            </value>
            <value>
                <fullName>C05FRBE</fullName>
            </value>
            <value>
                <fullName>C06FRBE</fullName>
            </value>
            <value>
                <fullName>C07FRBE</fullName>
            </value>
            <value>
                <fullName>C08FRBE</fullName>
            </value>
            <value>
                <fullName>C09FRBE</fullName>
            </value>
            <value>
                <fullName>C10FRBE</fullName>
            </value>
            <value>
                <fullName>C11FRBE</fullName>
            </value>
            <value>
                <fullName>C12FRBE</fullName>
            </value>
            <value>
                <fullName>C13FRBE</fullName>
            </value>
            <value>
                <fullName>C14FRBE</fullName>
            </value>
            <value>
                <fullName>C15FRBE</fullName>
            </value>
            <value>
                <fullName>C16FRBE</fullName>
            </value>
            <value>
                <fullName>C17FRBE</fullName>
            </value>
            <value>
                <fullName>C18FRBE</fullName>
            </value>
            <value>
                <fullName>C19FRBE</fullName>
            </value>
            <value>
                <fullName>C20FRBE</fullName>
            </value>
            <value>
                <fullName>C21FRBE</fullName>
            </value>
            <value>
                <fullName>TBUNFRBE</fullName>
            </value>
            <value>
                <fullName>C04FRDE</fullName>
            </value>
            <value>
                <fullName>C05FRDE</fullName>
            </value>
            <value>
                <fullName>C06FRDE</fullName>
            </value>
            <value>
                <fullName>C07FRDE</fullName>
            </value>
            <value>
                <fullName>C08FRDE</fullName>
            </value>
            <value>
                <fullName>C09FRDE</fullName>
            </value>
            <value>
                <fullName>C10FRDE</fullName>
            </value>
            <value>
                <fullName>C11FRDE</fullName>
            </value>
            <value>
                <fullName>C12FRDE</fullName>
            </value>
            <value>
                <fullName>C13FRDE</fullName>
            </value>
            <value>
                <fullName>C14FRDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>