GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_GDS_Air_Premium_Tariff_Code__c.field-meta.xml
<CustomField>
    <fullName>B2b_GDS_Air_Premium_Tariff_Code__c</fullName>
    <label>GDS Air Premium Tariff Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>B2b_S3_BeNe_Premium_Tariff_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P05FRBE</fullName>
            </value>
            <value>
                <fullName>P06FRBE</fullName>
            </value>
            <value>
                <fullName>P07FRBE</fullName>
            </value>
            <value>
                <fullName>P08FRBE</fullName>
            </value>
            <value>
                <fullName>P09FRBE</fullName>
            </value>
            <value>
                <fullName>P10FRBE</fullName>
            </value>
            <value>
                <fullName>P11FRBE</fullName>
            </value>
            <value>
                <fullName>P12FRBE</fullName>
            </value>
            <value>
                <fullName>P13FRBE</fullName>
            </value>
            <value>
                <fullName>P14FRBE</fullName>
            </value>
            <value>
                <fullName>P15FRBE</fullName>
            </value>
            <value>
                <fullName>P16FRBE</fullName>
            </value>
            <value>
                <fullName>P17FRBE</fullName>
            </value>
            <value>
                <fullName>P18FRBE</fullName>
            </value>
            <value>
                <fullName>P19FRBE</fullName>
            </value>
            <value>
                <fullName>P20FRBE</fullName>
            </value>
            <value>
                <fullName>P21FRBE</fullName>
            </value>
            <value>
                <fullName>P22FRBE</fullName>
            </value>
            <value>
                <fullName>P23FRBE</fullName>
            </value>
            <value>
                <fullName>PBUNFRBE</fullName>
            </value>
            <value>
                <fullName>P05FRDE</fullName>
            </value>
            <value>
                <fullName>P06FRDE</fullName>
            </value>
            <value>
                <fullName>P07FRDE</fullName>
            </value>
            <value>
                <fullName>P08FRDE</fullName>
            </value>
            <value>
                <fullName>P09FRDE</fullName>
            </value>
            <value>
                <fullName>P10FRDE</fullName>
            </value>
            <value>
                <fullName>P11FRDE</fullName>
            </value>
            <value>
                <fullName>P12FRDE</fullName>
            </value>
            <value>
                <fullName>P13FRDE</fullName>
            </value>
            <value>
                <fullName>P14FRDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>