GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_GDS_Air_Standard_Tariff_Code__c.field-meta.xml
<CustomField>
    <fullName>B2b_GDS_Air_Standard_Tariff_Code__c</fullName>
    <label>GDS Air Standard Tariff Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>B2b_S3_BeNe_Standard_Tariff_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W02FRBE</fullName>
            </value>
            <value>
                <fullName>W04FRBE</fullName>
            </value>
            <value>
                <fullName>W05FRBE</fullName>
            </value>
            <value>
                <fullName>W06FRBE</fullName>
            </value>
            <value>
                <fullName>W07FRBE</fullName>
            </value>
            <value>
                <fullName>W08FRBE</fullName>
            </value>
            <value>
                <fullName>W09FRBE</fullName>
            </value>
            <value>
                <fullName>W10FRBE</fullName>
            </value>
            <value>
                <fullName>W11FRBE</fullName>
            </value>
            <value>
                <fullName>W12FRBE</fullName>
            </value>
            <value>
                <fullName>W13FRBE</fullName>
            </value>
            <value>
                <fullName>W14FRBE</fullName>
            </value>
            <value>
                <fullName>W15FRBE</fullName>
            </value>
            <value>
                <fullName>W16FRBE</fullName>
            </value>
            <value>
                <fullName>W17FRBE</fullName>
            </value>
            <value>
                <fullName>W18FRBE</fullName>
            </value>
            <value>
                <fullName>W19FRBE</fullName>
            </value>
            <value>
                <fullName>W20FRBE</fullName>
            </value>
            <value>
                <fullName>W21FRBE</fullName>
            </value>
            <value>
                <fullName>WBUNFRBE</fullName>
            </value>
            <value>
                <fullName>W02FRDE</fullName>
            </value>
            <value>
                <fullName>W04FRDE</fullName>
            </value>
            <value>
                <fullName>W05FRDE</fullName>
            </value>
            <value>
                <fullName>W06FRDE</fullName>
            </value>
            <value>
                <fullName>W07FRDE</fullName>
            </value>
            <value>
                <fullName>W08FRDE</fullName>
            </value>
            <value>
                <fullName>W09FRDE</fullName>
            </value>
            <value>
                <fullName>W10FRDE</fullName>
            </value>
            <value>
                <fullName>W11FRDE</fullName>
            </value>
            <value>
                <fullName>W12FRDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>