GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_LastExtractionDate__c.field-meta.xml
<CustomField>
    <fullName>B2b_LastExtractionDate__c</fullName>
    <label>Last Extraction Date</label>
    <type>DateTime</type>
</CustomField>