GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_NegotiatedRateDetailCode__c.field-meta.xml
<CustomField>
    <fullName>B2b_NegotiatedRateDetailCode__c</fullName>
    <label>Negotiated Rate Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>