GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_PercentageDiscountBp__c.field-meta.xml
<CustomField>
    <fullName>B2b_PercentageDiscountBp__c</fullName>
    <label>Percentage Discount Business Premier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <label>6%</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8%</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9%</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11%</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12%</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13%</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14%</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15%</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16%</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17%</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18%</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19%</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20%</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21%</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22%</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23%</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24%</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25%</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>26%</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27%</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>28%</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>29%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>