GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_PercentageDiscountE_Plus__c.field-meta.xml
<CustomField>
    <fullName>B2b_PercentageDiscountE_Plus__c</fullName>
    <label>Percentage Discount Eurostar Plus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>3.5%</fullName>
            </value>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>9%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>