GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_PercentageDiscountE_Standard__c.field-meta.xml
<CustomField>
    <fullName>B2b_PercentageDiscountE_Standard__c</fullName>
    <label>Percentage Discount Eurostar Standard</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
                <default>true</default>
                <label>0%</label>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>