GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_PercentageDiscountFirst__c.field-meta.xml
<CustomField>
    <fullName>B2b_PercentageDiscountFirst__c</fullName>
    <label>Percentage Discount Premium</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>