GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_PercentageDiscountSp__c.field-meta.xml
<CustomField>
    <fullName>B2b_PercentageDiscountSp__c</fullName>
    <label>Percentage Discount Standard Premier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>3%</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>